# cpp_in_practice

./: .gitignore  CMakeLists.txt  README.md
advance/: CMakeLists.txt
basic/: CMakeLists.txt
basic/address_space/: CMakeLists.txt  main.cpp
basic/const/: test_const.cpp
basic/constructors/: CMakeLists.txt
basic/extern_global_const/: def.h  main.cpp
basic/extern_global_var/: def.h
basic/extern_variable/: main.cpp
basic/global_const/: a.cpp
basic/initializer_list/: main.cpp
basic/struct/: main.cpp  (+1 more)
common/: CMakeLists.txt  mock_duck.h  mock_floatnumber.h  mock_string.h  mock_struct.h  test_util.h
samples/: CMakeLists.txt
samples/basic/: CMakeLists.txt
samples/basic/basic_types/: CMakeLists.txt  main.cpp
samples/basic/const_qualifier/: CMakeLists.txt  main.cpp
samples/basic/constructors/: main.cpp
samples/basic/extern_const_global_var/: CMakeLists.txt  func_a.cpp  func_b.cpp
samples/basic/extern_global_var/: a.cpp  b.cpp
samples/basic/extern_variable/: CMakeLists.txt  header.h
samples/basic/global_const/: main.cpp
samples/basic/initializer_list/: CMakeLists.txt  main.cpp
samples/basic/lambda_expression/: main.cpp
samples/basic/lambda_function/: CMakeLists.txt
samples/basic/move_constructor/: main.cpp
samples/basic/override_operator/: main.cpp
samples/basic/sizeof/: main.cpp
samples/basic/smart_pointer/: CMakeLists.txt  main.cpp
samples/basic/standard_string/: CMakeLists.txt  main.cpp
samples/basic/static_inline/: def.h
samples/basic/stringstream/: CMakeLists.txt  main.cpp
samples/basic/type_cast/: CMakeLists.txt  main.cpp
trick/: CMakeLists.txt
(+47 files in other folders)
