project(basic)

add_subdirectory(constructors)
add_subdirectory(extern_variable)
add_subdirectory(lambda_expression)
add_subdirectory(stringstream)
add_subdirectory(initializer_list)
add_subdirectory(const_qualifier)
add_subdirectory(smart_pointer)
add_subdirectory(sizeof)
add_subdirectory(struct)
add_subdirectory(type_cast)
add_subdirectory(standard_string)
add_subdirectory(basic_types)